# trinitypeer

./: .gitignore  README.md  proposal.md
TrinityServer/: Cargo.toml
TrinityServer/src/: audio_coding.rs  auth_logic.rs  db.rs  main.rs  server.rs  streamer.rs
TrinityServer/src/auth_logic/: jwt_functions.rs  models.rs
TrinityServer/src/websockets/: listening.rs  message_handler.rs  mod.rs  start_listening.rs
