[package]
name = "TrinityServer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", features = ["sink"] }
tower-http = { version = "0.5", features = ["trace"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
webrtc = "0.12.0"
dashmap = "6.1.0"
flacenc = {git = "https://github.com/yotarok/flacenc-rs", version = "0.5.0"}
pretty_env_logger = "0.5.0"
actix = "0.13.5"
actix-web = "4.10.2"
async-stream = "0.3.6"
tokio-stream = "0.1.17"
